--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffc851;
+    background-color: #FE7743;
 }
 
 .container{
@@ -17,14 +17,14 @@ body {
     width: 550px;
     border-radius: 8px;
     box-shadow: 15px 35px 20px rgba(0, 0, 0, 0.5), -10px -20px 20px rgba(0, 0, 0, 0.5);
-    background-color: #1e272e;
+    background-color: #273F4F;
     border: 1.3px solid #ddd;
 }
 
 .sidebar{
     width: 60px;
     height: 100%;
-    background-color: #ff3f34;
+    background-color: #447D9B;
     padding: 20px;
     box-sizing: border-box;
     color: #fff;
@@ -49,14 +49,14 @@ ul {
 
 li {
     padding: 10px 10px;
-    border-bottom: 2px solid #ff6348;
+    border-bottom: 2px solid #D7D7D7;
     border-radius: 5rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 li:hover{
-    background-color: #ff6348;
+    background-color: #D7D7D7;
 }
 
 .nav-link {
